# dj-assist

./: .gitignore  README.md  SPEC.md  compose.yaml  dbeaver_tracks_query.sql  dj-assist-server-backup-20260502-155352.sql  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
audio-tools/lib/: libSvtAv1Enc.4.dylib  libavformat.62.dylib  libavutil.60.dylib  libchromaprint.1.dylib  libdav1d.7.dylib  libmp3lame.0.dylib  libopus.0.dylib  libswresample.6.dylib  libvpx.12.dylib  libx264.165.dylib
dj_assist/: __init__.py  analyzer.py  art_store.py  cli.py  db.py  media.py  scanner.py  tag_writer.py  web.py
docs/: ALBUM-ART-BACKFILL.md  CLIENT-INSTALL.md  ELECTRON-PLAN.md  PRODUCT-SHIPPING.md  RELEASES.md  monetization-roadmap.md
electron/: main.cjs  preload.cjs
electron/assets/: app-icon.icns
logs/: dj-assist-auth.ndjson  dj-assist-client.ndjson
scripts/: backfill-neon-album-art.py  build-and-run-local.sh  build-mac-local.sh  check-node.cjs  debug-google-oauth.cjs  electron-builder-flavored.cjs  electron-dev.cjs  electron-start.cjs  google-drive-analysis-worker.cjs  load-env.cjs  neon-prevent-client-filehash-duplicates.sql  notarize-mac.cjs  prepare-app-icon.cjs  prepare-audio-tools.cjs  prepare-build-env.cjs  prepare-python-bundle.cjs  prepare-standalone-assets.cjs  repair-local-data-uri-art.py  run-browser-remote.sh  run-local-stack.sh  run-with-app-flavor.cjs  verify-google-oauth-config.cjs  verify-google-oauth.cjs
src/app/: globals.css  layout.tsx  page.tsx
tools/: fetchdj  pushdj.sh
(+80 files in other folders)
