[project]
name = "dj-assist"
version = "0.4.0"
description = "DJ Track Analysis and Set Builder"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "psycopg[binary]>=3.1.19",
    "sqlalchemy>=2.0.0",
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
dj-assist = "dj_assist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dj_assist"]
